--- a/src/containers/employees_list.scss
+++ b/src/containers/employees_list.scss
@@ -1,20 +1,143 @@
+.header-fixed {
+  height: 80px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background: rgba(255, 255, 255, 0.95);
+  background-attachment: fixed;
+  background-size: cover;
+  width: 100%;
+  z-index: 3;
+  overflow: hidden;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 0 0 5px -2px #333;
+}
+
+.header-logo h1 {
+  display: inline-block;
+}
+
+.header-fixed .header-logo {
+  margin-right: auto;
+}
+
+.header-fixed div {
+  align-self: center;
+}
+
 .all-employees-list {
-  background: #f2f2f2;
+  height: calc(100vh-80);
+  margin-top: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: stretch;
+  flex-wrap: wrap;
 }
 
 .employee-box {
+  transform: scale(0, 0);
   border: 1px solid #ddd;
-  background: #fff;
-  width: 250px;
-  height: 250px;
+  background-color: rgba(255, 255, 255, 0.4);
+  width: 280px;
+  min-height: 250px;
   margin: 10px;
   display: inline-block;
   box-shadow: 0 0 8px -3px #ccc;
   border-radius: 4px;
-  transition: box-shadow 0.3s ease-in-out;
+  transition: box-shadow 0.3s ease-in-out, background-color 0.3s ease-in-out;
+  padding: 10px;
+  animation: appear 0.3s ease-in forwards;
+  position: relative;
+  border: 5px solid transparent;
+  text-align: center;
+  min-width: 250px;
 }
 
 .employee-box:hover {
-  box-shadow: 0 0 8px -3px #000;
-  transition: box-shadow 0.3s ease-in-out;
+  box-shadow: 0 0 18px -10px #000;
+  background-color: rgba(200, 200, 200, 0.01);
+  border: 5px solid #fff;
+  transition: box-shadow 0.3s ease-in-out, background-color 0.3s ease-in-out;
+}
+
+.employee-box-row {
+  display: grid;
+  grid-template-columns: 80px 1fr;
+  text-align: left;
+  padding: 0;
+  margin-bottom: 5px;
+  font-size: 13px;
+  align-items: center;
+}
+
+.employee-box-row select {
+  width: 100%;
+}
+
+.employee-box-row-no-cols input {
+  text-align: center;
+  width: calc(100% - 6px);
+}
+
+.box-actions {
+  border-top: 1px solid #ccc;
+  margin-top: 10px;
+  padding-top: 8px;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.box-actions a {
+  font-size: 13px;
+  margin-left: 5px;
+}
+
+.input-standard {
+  border: 1px solid transparent;
+  padding: 0px 2px;
+  border-radius: 2px;
+  background: transparent;
+  min-height: 22px;
+  width: calc(100% - 6px);
+}
+
+.input-standard:hover {
+  /*border: 1px solid rgba(0, 0, 0, 0.3);*/
+  background: #fff;
+  box-shadow: 0 0 5px -2px #999;
+}
+
+.input-standard:focus {
+  box-shadow: 0 0 5px -2px #666;
+  background: #fff;
+}
+
+.input-key-data {
+  font-size: 22px;
+  text-transform: capitalize;
+  margin-bottom: 2px;
+}
+
+.input-bold {
+  font-size: 28px;
+  font-weight: 500;
+}
+
+.flex-stretch {
+  display: flex;
+  align-content: stretch;
+  flex-grow: 1;
+  position: relative;
+}
+
+.react-datepicker-wrapper,
+.react-datepicker__input-container {
+  width: 100%;
+}
+
+.top-layer {
+  z-index: 1;
 }
