--- a/src/styles/_animations.scss
+++ b/src/styles/_animations.scss
@@ -1,19 +1,23 @@
+/* Used for ".box" animations */
 @keyframes appear {
   0% {
-    transform: scale(0, 0);
-  }
-  80% {
-    transform: scale(1.1, 1.1);
+    transform: scale(1, 0);
   }
   100% {
     transform: scale(1, 1);
   }
 }
 
-@keyframes appear {
+/* Used for ".logo" animation */
+@keyframes enlarge {
   0% {
-    transform: scale(1, 0);
+    transform: scale(0, 0);
   }
+
+  60% {
+    transform: scale(1.2, 1.2);
+  }
+
   100% {
     transform: scale(1, 1);
   }
